--- a/QRInventory/QRInventory.csproj
+++ b/QRInventory/QRInventory.csproj
@@ -17,9 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="TamoHelmet2BW.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <Folder Include="Resources\" />
   </ItemGroup>
 
 </Project>
